--- a/UE4_HomeTask4_Delegs.uproject
+++ b/UE4_HomeTask4_Delegs.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "UE4_HomeTask4_Delegs",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
